# nsisunz

./: .gitattributes  .gitignore  .gitmodules
Source/: CMakeLists.txt  nsisunz.cpp
Source/libzip/include/: config.h  zipconf.h
Source/libzip/lib/: x64 Native Tools Command Prompt for VS 2022 here's the libzip build.txt  zip.lib  zs.lib
